<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="290dp"
        android:layout_height="92dp"
        android:layout_marginHorizontal="35dp"
        android:layout_marginStart="61dp"
        android:layout_marginBottom="412dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_editor_absoluteY="35dp"
        app:srcCompat="@drawable/bs"
        android:contentDescription="@string/app_name" />


    <RelativeLayout
        android:id="@+id/frame_2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/frame2"
        tools:layout_editor_absoluteX="351dp"
        tools:layout_editor_absoluteY="28dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/i"
            android:layout_width="4dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10.5dp"
            android:layout_marginTop="0.5dp"
            android:gravity="top"
            android:lineSpacingExtra="3sp"
            android:text="@string/about"
            android:textAppearance="@style/i"
            android:translationY="-1.42sp" />

        <Button
            android:id="@+id/btnextra"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/frame_86"
        android:layout_width="320dp"
        android:layout_height="232dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/framebig"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="213dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/frame1"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/frame2">

            <RelativeLayout
                android:id="@+id/inventory_2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="90dp"
                android:background="@drawable/stock_24"
                tools:layout_editor_absoluteX="92dp"
                tools:layout_editor_absoluteY="7dp" />

            <TextView
                android:id="@+id/stock_baran"
                android:layout_width="106dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="top"
                android:lineSpacingExtra="3sp"
                android:text="@string/stock_baran"
                android:textAppearance="@style/stock_baran"
                android:translationY="-1.42sp"
                tools:layout_editor_absoluteX="127dp"
                tools:layout_editor_absoluteY="8dp" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/frame2"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="64dp"
            android:background="@drawable/frame2">

            <TextView
                android:id="@+id/kasir"
                android:layout_width="83dp"
                android:layout_height="24dp"
                android:layout_marginStart="160dp"
                android:gravity="top"
                android:lineSpacingExtra="3sp"
                android:text="@string/kasir"
                android:textAppearance="@style/kasir"
                android:translationY="-1.42sp"
                tools:layout_editor_absoluteX="158dp"
                tools:layout_editor_absoluteY="8dp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible" />
            <RelativeLayout
                android:id="@+id/receipt_lon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="120dp"
                android:background="@drawable/kasir_24"

                tools:layout_editor_absoluteX="120dp"
                tools:layout_editor_absoluteY="8dp" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/frame3"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="128dp"
            android:background="@drawable/frame2">


            <TextView
                android:id="@+id/rekapitulas"
                android:layout_width="96dp"
                android:layout_height="24dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="8dp"
                android:gravity="top"
                android:lineSpacingExtra="3sp"
                android:text="@string/rekapitulas"
                android:textAppearance="@style/rekapitulas"
                android:translationY="-1.42sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible" />
            <RelativeLayout
                android:id="@+id/insert_char"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/rekap_24"

                tools:layout_editor_absoluteX="105dp"
                tools:layout_editor_absoluteY="8dp" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/frame_59"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="193dp"
            android:background="@drawable/frame1">

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible" />
            <TextView
                android:id="@+id/keluar"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="147.5dp"
                android:layout_marginEnd="112dp"
                android:gravity="top"
                android:lineSpacingExtra="3sp"
                android:text="@string/keluar"
                android:textAppearance="@style/keluar"
                android:translationY="-1.42sp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="8dp" />

            <RelativeLayout
                android:id="@+id/logout_blac"
                android:layout_width="36dp"
                android:layout_height="25dp"
                android:background="@drawable/exit_24"
                tools:layout_editor_absoluteX="114dp"
                tools:layout_editor_absoluteY="5dp" />

        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</android.support.constraint.ConstraintLayout>
